# gfx

./: .gitmodules  CMakeLists.txt  FileManager.cc  FileManager.h  README.md  Shader.h  glad.c  main.cpp  setup.sh  shader.fs  shader.vs
include/glad/: glad.h
shaders/: shader.fs  shader.vs
